docs-app/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calangoui-docs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - calangoui.by2.com.br
      secretName: calangoui-docs-tls
  rules:
    - host: calangoui.by2.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calangoui-docs
                port:
                  number: 8080
